@@ -28,7 +28,9 @@ production.
 * $wgUploadNavigationUrl should be used for file redlinks if
   $wgUploadMissingFileUrl is not set. The first was used for this
   until the second was introduced in 1.17.
-* (bug 25355) Parser generates edit section links for special pages
+* (bug 25355) Parser generates edit section links for special pages.
+* (bug 27894) Move 'editondblclick' event listener down from body to
+  div#bodyContent.
 
 === API changes in 1.19 ===
 * (bug 19838) siprop=interwikimap can now use the interwiki cache.
